<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="tgrice.utdallas.edu.ninmu.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:id="@+id/logolayout">
        <tgrice.utdallas.edu.ninmu.SpecialTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textSize="75sp"
            android:textAlignment="center"
            android:layout_weight="4"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/dharma"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:id="@+id/menulayout">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_button_text"
            android:id="@+id/sessionButton"
            android:onClick="launchSession"
            android:minHeight="80dp"
            android:layout_marginBottom="20dp"
            android:minWidth="200dp"
            android:background="@color/colorPrimary1"
            android:layout_centerHorizontal="true" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_button_text"
            android:id="@+id/settingsButton"
            android:layout_below="@+id/sessionButton"
            android:minHeight="80dp"
            android:minWidth="200dp"
            android:background="@color/colorPrimary1"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</LinearLayout>
